--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,7 +18,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="My Movie History"
+            android:text="Movie History"
             android:textSize="35sp"
             android:textColor="@color/white"
             android:layout_gravity="center"
