--- a/app/src/main/res/layout/activity_movie_detail.xml
+++ b/app/src/main/res/layout/activity_movie_detail.xml
@@ -17,7 +17,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="My Movie History"
+            android:text="New Movie"
             android:textSize="35sp"
             android:textColor="@color/white"
             android:layout_gravity="center"
@@ -27,7 +27,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Save"
-            android:textSize="20sp"
+            android:textSize="25sp"
             android:textColor="@color/white"
             android:layout_gravity="end"
             android:textStyle="bold"
