--- a/app/src/main/res/layout/note_cell.xml
+++ b/app/src/main/res/layout/note_cell.xml
@@ -19,10 +19,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Description"
-        android:textStyle="bold"
         android:maxLines="1"
+        android:layout_marginTop="5dp"
         android:textColor="@color/darkGray"
-        android:textSize="25sp"/>
+        android:textSize="20sp"/>
 
 
 </LinearLayout>
