--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,7 +13,7 @@
         android:layout_height="wrap_content"
         android:minHeight="?actionBarSize"
         android:theme="?actionBarTheme"
-        android:background="@color/darkGray">
+        android:background="@color/red">
 
         <TextView
             android:layout_width="wrap_content"
@@ -21,28 +21,28 @@
             android:text="Movie History"
             android:textSize="35sp"
             android:textColor="@color/white"
-            android:layout_gravity="center"
-            android:textStyle="bold"/>
-        
+            android:textStyle="bold"
+            android:layout_gravity="center"/>
+
         <Button
+            android:text="+"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="+"
             android:textSize="35sp"
-            android:textColor="@color/white"
-            android:layout_gravity="end"
             android:textStyle="bold"
-            android:onClick="newMovie"/>
+            android:layout_gravity="end"
+            android:textColor="@color/white"
+            android:onClick="newNote"/>
 
     </androidx.appcompat.widget.Toolbar>
-    
+
     <ListView
-        android:id="@+id/movieListView"
+        android:id="@+id/noteListView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:divider="@color/darkGray"
         android:layout_marginTop="3dp"
-        android:dividerHeight="3dp"
-        android:divider="@color/darkGray"/>
+        android:dividerHeight="3dp"/>
 
 
 </LinearLayout>
